--- a/exercicios/capitulo_02/estrutura_dados.ipynb
+++ b/exercicios/capitulo_02/estrutura_dados.ipynb
@@ -8,10 +8,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = []"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Crie uma lista com um único tipo de dado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_unica = [1, 2, 3, 4, 5, 6]"
    ]
   },
   {
@@ -22,10 +40,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_dif = [1, 'Oi', [5,6,7], True]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Descubra o comprimento das listas criadas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "6\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(lista))\n",
+    "print(len(lista_unica))\n",
+    "print(len(lista_dif))"
    ]
   },
   {
@@ -36,10 +84,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tupla = (2,3,7)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Crie um conjunto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conj = {1, 65, 8, 1}"
    ]
   },
   {
@@ -50,10 +116,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{8, 65, 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(conj)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Crie um dicionário"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicionario = {'nome': 'Tamires', 'idade': 30}"
    ]
   },
   {
@@ -62,17 +154,44 @@
    "source": [
     "- Imprima na tela o valor correspondente a uma das chaves do dicionário"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamires\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dicionario['nome'])\n",
+    "print(dicionario['idade'])\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   },
   "orig_nbformat": 4,
   "vscode": {
