--- a/exercicios/capitulo_02/classe_objetos.ipynb
+++ b/exercicios/capitulo_02/classe_objetos.ipynb
@@ -12,7 +12,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Cachorro:\n",
+    "    def __init__(self, nome='Nísia'):\n",
+    "\n",
+    "        self.patas = 4\n",
+    "        self.cor = 'laranja'\n",
+    "        self.nome = nome\n",
+    "\n",
+    "    def caracteristicas(self):\n",
+    "        print(f'{self.nome} é um cachorro que late, tem {self.patas} patas e sua cor é {self.cor}') "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -22,6 +32,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,10 +53,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "minha_cachorra = Cachorro(Paçoca)\n",
+    "\n",
+    "cachorra_vizinha = Cachorro()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Execute o método"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "minha_cachorra.caracteristicas()\n",
+    "\n",
+    "cachorra_vizinha.caracteristicas()"
    ]
   }
  ],
