operadores part ok

--- a/exercicios/capitulo_02/funcao.ipynb
+++ b/exercicios/capitulo_02/funcao.ipynb
@@ -8,10 +8,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quadrado(k):\n",
+    "    return k**2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Defina uma função com 2 argumentos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def soma(a,b):\n",
+    "    return a + b"
    ]
   }
  ],
