--- a/exercicios/capitulo_02/operadores.ipynb
+++ b/exercicios/capitulo_02/operadores.ipynb
@@ -196,13 +196,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a > b"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Relacione dois valores usando o operador \"maior que ou igual a\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a >= b"
    ]
   },
   {
@@ -213,10 +224,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b < a"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Relacione dois valores usando o operador \"menor que ou igual a\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b <= a"
    ]
   },
   {
@@ -227,10 +256,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = d"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Relacione dois valores usando o operador \"diferente de\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s != 10"
    ]
   },
   {
@@ -248,6 +295,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 3\n",
+    "b = 5\n",
+    "c = 8\n",
+    "\n",
+    "if (a < b) and (b < c):\n",
+    "    print('Os números estão na ordem')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -255,10 +316,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 4\n",
+    "y = 6\n",
+    "z = 1\n",
+    "\n",
+    "if (x > y) or (y > z):\n",
+    "    print('Deu certo, um dos números é maior')\n",
+    "     "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Crie uma operação lógica com o operador \"not\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nome_completo = str(input('Entre com o nome completo:'))\n",
+    "\n",
+    "if \"Tamires\" not in nome_completo:\n",
+    "    print ('Você não se chama Tamires')\n",
+    "\n",
+    "    \n"
    ]
   },
   {
@@ -276,10 +366,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = [1, 4, 6, 8, 0]\n",
+    "\n",
+    "if 5 not in lista:\n",
+    "    print('5 não está na lista')\n",
+    "else:\n",
+    "    print('O número 5 está na lista')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Verifique se uma string não está contida em outra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nome_completo = str(input('Entre com o nome completo:'))\n",
+    "\n",
+    "if \"Tamires\" not in nome_completo:\n",
+    "    print ('Você não se chama Tamires')\n"
    ]
   }
  ],
