--- a/exercicios/capitulo_03/booleano.ipynb
+++ b/exercicios/capitulo_03/booleano.ipynb
@@ -9,23 +9,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_nomes = ['Tamires', 'José', 'Rose', 'Tálisson']"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Crie um for loop que passe por todos os itens da lista e imprima o item\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamires\n",
+      "José\n",
+      "Rose\n",
+      "Tálisson\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_nomes = ['Tamires', 'José', 'Rose', 'Tálisson']\n",
+    "\n",
+    "n = len(lista_nomes)\n",
+    "\n",
+    "for k in range(0, n):\n",
+    "    print(lista_nomes[k])"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   },
   "orig_nbformat": 4,
   "vscode": {
