--- a/exercicios/capitulo_03/string.ipynb
+++ b/exercicios/capitulo_03/string.ipynb
@@ -9,11 +9,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nome = 'Rosemar de Fátima'"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Imprima apenas os primeiros 3 caracteres da sua string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ros\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nome[0:3])"
    ]
   },
   {
@@ -25,11 +51,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rosemar de fátima\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nome.lower())"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Converta toda a string para letras maiúsculas\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROSEMAR DE FÁTIMA\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nome.upper())"
    ]
   },
   {
@@ -41,6 +101,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rosemar de fátima\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nome.capitalize())"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -49,11 +126,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rosemar De Fátima\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nome.title())"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Inverta o case de todas as letras da string\n"
+    "- Inverta o case de todas as letras da string\n",
+    "\n",
+    "print(nome.swapcase())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rOSEMAR DE fÁTIMA\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nome.swapcase())"
    ]
   },
   {
@@ -63,17 +176,42 @@
    "source": [
     "- Formate uma string usando string format"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O nome da pessoa é Rosemar de Fátima\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'O nome da pessoa é {nome}')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   },
   "orig_nbformat": 4,
   "vscode": {
