--- a/exercicios/capitulo_03/numerico.ipynb
+++ b/exercicios/capitulo_03/numerico.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,10 +40,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultado: 32.1850\n"
+     ]
+    }
+   ],
+   "source": [
+    "from decimal import Decimal\n",
+    "\n",
+    "# Criando números decimais com precisão\n",
+    "num1 = Decimal('10.25')\n",
+    "num2 = Decimal('3.14')\n",
+    "\n",
+    "# Realizando uma operação (ex: multiplicação)\n",
+    "resultado = num1*num2\n",
+    "\n",
+    "print(f'Resultado: {resultado}')"
+   ]
   },
   {
    "cell_type": "markdown",
