--- a/exercicios/capitulo_04/dicionarios.ipynb
+++ b/exercicios/capitulo_04/dicionarios.ipynb
@@ -9,11 +9,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dici = {'nome': 'Tamires', 'idade': 30, 'altura': 1.60, 'profissão': 'militar'}"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Faza uma lista com as chaves do dicionário criado\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['nome', 'idade', 'altura', 'profissão']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = []\n",
+    "\n",
+    "for k in dici.keys():\n",
+    "    lista.append(k)\n",
+    "print(lista)"
    ]
   },
   {
@@ -25,11 +55,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Tamires', 30, 1.6, 'militar')\n"
+     ]
+    }
+   ],
+   "source": [
+    "valores = tuple(dici.values())\n",
+    "\n",
+    "print(valores)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Localize o valor correspondente a uma chave do dicionário\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamires\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dici['nome'])"
    ]
   },
   {
@@ -41,11 +107,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nome': 'Tamires', 'idade': 30, 'altura': 1.6, 'profissão': 'militar', 'sexo': 'feminino'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dici['sexo'] = 'feminino'\n",
+    "\n",
+    "print(dici)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Usando o módulo collections, crie um dicionário cujos o valor padrão serão listas\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'list'>, {'doces': ['brigadeiro', 'paçoca', 'pudim'], 'salgados': ['coxinha', 'milho', 'pastel']})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "padrao = defaultdict(list)\n",
+    "\n",
+    "padrao['doces'].append('brigadeiro')\n",
+    "padrao['doces'].append('paçoca')\n",
+    "padrao['doces'].append('pudim')\n",
+    "padrao['salgados'].append('coxinha')\n",
+    "padrao['salgados'].append('milho')\n",
+    "padrao['salgados'].append('pastel')\n",
+    "\n",
+    "print(padrao)"
    ]
   },
   {
@@ -57,23 +170,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'list'>, {'doces': ['brigadeiro', 'paçoca', 'pudim'], 'salgados': ['coxinha', 'milho', 'pastel'], 'bebidas': ['refri', 'vinho', 'quentão', 'água']})\n"
+     ]
+    }
+   ],
+   "source": [
+    "padrao['bebidas'] = ['refri', 'vinho', 'quentão', 'água']\n",
+    "\n",
+    "print(padrao)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Localize um valor da lista correspondente a uma chave do dicionário de listas"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "milho\n"
+     ]
+    }
+   ],
+   "source": [
+    "valor = padrao['salgados'][1]\n",
+    "print(valor)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   },
   "orig_nbformat": 4,
   "vscode": {
