--- a/exercicios/capitulo_04/dictionary_comprehension.ipynb
+++ b/exercicios/capitulo_04/dictionary_comprehension.ipynb
@@ -9,11 +9,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_paises = ['Brasil', 'Alemanha', 'Coreia do Sul', 'Chile']"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Usando o recurso dictionary comprehension, crie um dicionário cuja a chave é o comprimento do item e o valor, o próprio item da lista.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{6: 'Brasil', 8: 'Alemanha', 13: 'Coreia do Sul', 5: 'Chile'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict_paises = {len(item): item for item in lista_paises}\n",
+    "print(dict_paises)"
    ]
   },
   {
@@ -25,11 +52,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_tupla = [(1,2,3,4,5), (10,20,30,40,50), (100,200,300,400,500)]"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Usando o recurso dictionary comprehension, crie um dicionário cuja a chave é o primeiro item da tupla e o valor, o segundo\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 2, 10: 20, 100: 200}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#dict_tuplas = {lista_tupla[item][0]: lista_tupla[item][1] for item in lista_tupla}\n",
+    "\n",
+    "dict_tuplas = {tupla[0]: tupla[1] for tupla in lista_tupla}\n",
+    "\n",
+    "print(dict_tuplas)"
    ]
   },
   {
@@ -41,11 +98,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_dados = {'num': 1, 'dobro': 2, 'triplo': 3}"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- Usando o recurso dictionary comprehension, crie um novo dicionário cuja a chave é uma maniputação do valor\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2: 1, 4: 2, 6: 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict_novo = {2*v: v  for k, v in dict_dados.items()}\n",
+    "\n",
+    "print(dict_novo)"
    ]
   },
   {
@@ -55,17 +140,44 @@
    "source": [
     "- Usando o recurso dictionary comprehension, crie um dicionário só com chaves com commprimento menor ou igual a 3\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'num': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict_novo2 = {k:v  for k, v in dict_dados.items() if len(k)<=3}\n",
+    "\n",
+    "print(dict_novo2)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   },
   "orig_nbformat": 4,
   "vscode": {
